# ChatVote

./: .gitignore  .gitleaksignore  .mega-linter.yml  .secretlintignore  AGENTS.md  ARCHI.md  CLAUDE.md  Makefile  README.md  cspell.json  docker-compose.dev.yml  playwright.config.ts
CHATVOTE-BackEnd/: .dockerignore  .env.example  .env.local.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.minimal  LICENSE  NOTICE  README.md  docker-compose.dev.yml  docker-compose.yml  healthcheck_wrapper.py  pyproject.toml  vulture_whitelist.py
CHATVOTE-BackEnd/.github/workflows/: dev-chatvote-api-AutoDeployTrigger-59105f3d-c111-4390-8b9d-b650fbfd234b.yml  prod-chatvote-api-AutoDeployTrigger-99a452a9-54d4-4742-aea0-aaba78b5b991.yml
CHATVOTE-BackEnd/data/: AGENTS.md
CHATVOTE-BackEnd/data/scripts/: AGENTS.md  add_additional_data.ipynb  delete_vector_store_data.py  generate_db.ipynb  index_candidate_websites.py  scrape_voting_behavior.ipynb  script_utils.py  vector_store_requests.ipynb  vector_store_voting_behavior.ipynb  vector_store_voting_behavior.ipynb.license
CHATVOTE-BackEnd/docs/: AGENTS.md  technical-stack.md
CHATVOTE-BackEnd/firebase/: .firebaserc  .gitignore  AGENTS.md  Dockerfile  firebase-test.json  firebase.json  firestore-test.rules  firestore.rules  package-lock.json  package.json
CHATVOTE-BackEnd/firebase/functions/: .gitignore  AGENTS.md  main.py  models.py  requirements.txt
CHATVOTE-BackEnd/scripts/: AGENTS.md  analyze_metadata_quality.py  audit_responses.py  backfill_md_urls.py  backfill_profession_urls.py  backfill_urls.py  backup_all_professions.py  candidate_id_audit.py  candidate_id_audit_figures.py  check_prod_status.py  chunk_health_audit.py  crawl_all_candidates.py  eval_report.py  export-firestore.js  export_emulator_to_seed.py  fetch_second_turn_candidates.py  generate_goldens.py  generate_ts_types.py  import-firestore.js  index_election_posters.py  index_posters_prod.py  ingest_first_round_elected.py  ingest_second_tour_candidatures.py  migrate_dev_to_prod_qdrant.py  migrate_firebase_urls_to_s3.py  migrate_municipalities_to_prod.js  municipality_audit.py  ocr_fidelity_audit.py  optimize_prompts.py  package-lock.json  package.json  paris_chunk_audit.py  pipeline_audit.py  pipeline_audit_figures.py  qdrant_snapshot.py  seed_all_profession_communes.py  seed_commune_vectors.py  seed_local.py  seed_prod_chats.py  seed_prod_questions.py  (+10 more)
CHATVOTE-BackEnd/src/: AGENTS.md  aiohttp_app.py  chatbot_async.py  firebase_service.py  job_runner.py  llms.py  model_config.py  parallel_profession_indexer.py  parallel_runner.py  prompts.py  prompts_en.py  utils.py  vector_store_helper.py  websocket_app.py
CHATVOTE-BackEnd/src/i18n/: AGENTS.md  __init__.py  translator.py
CHATVOTE-BackEnd/src/models/: AGENTS.md  assistant.py  candidate.py  chat.py  chunk_metadata.py  dtos.py  general.py  party.py  scraper.py  structured_outputs.py  vote.py
CHATVOTE-BackEnd/src/services/: AGENTS.md  __init__.py  backfill_metadata.py  backfill_themes.py  candidate_indexer.py  candidate_website_scraper.py  chunk_classifier.py  (+14 more)
CHATVOTE-BackEnd/tests/: AGENTS.md  conftest.py  test_candidate_indexer.py  test_chunk_classifier.py  test_chunk_metadata.py  test_chunking.py  test_content_processing.py  test_crawl_scraper_cleanup.py  test_crawl_scraper_flow.py  test_indexer_node.py  test_manifesto_indexer.py  test_pdf_extract.py  test_pipeline_base.py  test_pipeline_context.py  test_qdrant_ops.py  test_seed_functions.py  test_source_builder.py  test_theme_classifier.py  test_topic_stats.py  test_vector_search.py  test_vector_store_helper.py  test_websocket_app.py
(+672 files in other folders)
